# personal-weight-tracker

./: .env.example  .gitignore  .ruff.toml  Procfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  __main__.py  alembic.ini  conftest.py
backend/alembic/: env.py
backend/alembic/versions/: 26e2b6876f8d_add_updated_at_to_measurements.py  d12c0225fb1b_initial_schema.py
backend/analysis/: curve_fit.py  smoothing.py  stats.py
backend/analysis/tests/: test_analysis.py
backend/api/: __init__.py  auth.py  deps.py  schemas.py
backend/api/routes/: charts.py  exports.py  imports.py  measurements.py  stats.py  users.py
backend/api/tests/: test_api.py  test_imports.py
backend/db/: __init__.py  engine.py  migrate.py  store.py
backend/db/tests/: test_data.py
backend/viz/: charts.py  palettes.py
data/: weight_progression.csv
docker/keycloak/: realm-export.json
docker/postgres/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  plotly.d.ts
frontend/src/context/: AuthContext.tsx  WeightTrackerContext.tsx
frontend/src/hooks/: useDataPage.ts  useOnboarding.ts  usePolling.ts  useTheme.ts
frontend/src/lib/: PlotlyFactory.ts  api.ts  cn.ts  palette.ts  types.ts  utils.ts
frontend/src/pages/: AboutPage.tsx  AnalysisPage.tsx  AuthCallbackPage.tsx  DashboardPage.tsx  DataPage.tsx  LoginPage.tsx  SettingsPage.tsx  SilentRenewPage.tsx
report/: rapport_poids.md
src/: __main__.py  weight_chart.py
src/analysis/: __init__.py  derivative.py  stats.py
src/api/: __init__.py  deps.py  schemas.py
src/api/routes/: __init__.py  charts.py  measurements.py  stats.py
src/db/: migrate.py  store.py
src/ui/: __init__.py  callbacks.py  layout.py
src/viz/: __init__.py  charts.py  palettes.py
tests/: test_analysis.py  test_api.py  test_figures.py
(+42 files in other folders)
